--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
-
+    <link rel="icon" type="image/x-icon" href="https://static.clearstreet.io/favicon.ico">
     <!--
     ReDoc doesn't change outer page styles
     -->
